--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ E-mail: alcored@outlook.com
 Mobile: +52 1 3310533033
 
 <br/>
-<h1> Marcela Martínez Galván </h1>
+<h1> Alcored Anlyst</h1>
 <br/>
 
 <p>Business Analyst in Technical Support abd Development Processes.
@@ -29,8 +29,8 @@ Solved and proven analyticals skills to planning and coordinating activities bet
 <h1> Professional Experience </h1>
 
 <p>RMS Monitor process for preventive maintenance</p>
-<p>Carestream, Soluciones Medicas, Guadalajara Jalisco.</p>
-<p>Junio 2015- Diciembre 2016</p>
+<p></p>
+<p>Building/p>
 
 </body>
 </html>
