--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
 <h1>  Personal Information </h1>
 
 E-mail: alcored@outlook.com
-Mobile: +52 1 3310533033
+Mobile: +52 1 (3310533033)
 
 <br/>
-<h1> Alcored Anlyst</h1>
+<h1> Marcela Martinez Galván</h1>
 <br/>
 
-<p>Business Analyst in Technical Support abd Development Processes.
-Over 5 and half years of professional Experience on IT Service for optimization and continuos improvement processes , focussed on customer service, strong analysis skills for decision making.
-Solved and proven analyticals skills to planning and coordinating activities between functional and development team.</p>
+<p>Business Analyst in Technical Support and Development Processes.
+   Over 5 and half years of professional Experience on IT Service for optimization and continuos improvement processes,
+   Focussed on customer service, strong analysis skills for decision making.
+   Solved and proven analyticals skills to planning and coordinating activities between functional and development team.</p>
 <br/>
 <nav>
 <ul>
