--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ E-mail: alcored@outlook.com
 Mobile: +52 1 (3310533033)
 
 <br/>
-<h1> Marcela Martinez Galván</h1>
+<h1 style="text-align:center;"> Marcela Martinez Galván</h1>
 <br/>
 
 <p>Business Analyst in Technical Support and Development Processes.
@@ -28,6 +28,47 @@ Mobile: +52 1 (3310533033)
 
 </nav>
 
+   <h2 style=" color:#c0c0c0; text-align:center; ">Professional Experience </h2>
+   <h3> RMS Monitor Process for preventive maintenance </h3> 
+   <p> Carestream, Soluciones Médicas y Manufactura,Guadalajara Jalisco <p>
+   
+   <h3>Responsabilities : </h3>
+   <br/>
+   
+   <p>Vertical LAR  administrator from a company Portal web ( used to  provide a proactive and preventive monitor service ) </p>
+   <p>Creating Customer Documentation</p>
+   <p>Coordinating, improving and participating on  the Support Process </p>
+   <p>Focal Point on LAR Customer requeriments for new Monitor Portal Version</p>
+   <p>Coordinating LAR Tunnelling Network implementations</p>
+   <p>Coordinating LAR MonitorMigration Processes </p>
+   <p>Elaborating  LAR Monitor Training Documentation</p>
+   
+   <h3> Technologies used: </h3>   
+   <br/>
+   
+   <p>MySQL 5.5.2 </p>
+   <p>Scrum Methodology</p>
+   <p>SQL lite</p>   
+   <p>PACS 10.1 Server</p>
+   <p>RIS V11 Server </p>
+   <p>RMS Monitor Portal</p>
+   <p>Sametime</p>
+   <p>Sharepoint 2008</p>
+   <p>Acrobat PDF</p>
+   <p>Migration Platform</p>
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
 </body>
 </html>
 
