--- a/index.html
+++ b/index.html
@@ -2,24 +2,27 @@
 
 <body>
 
-<h1>  Personal Information </h1>
-
+<h1 style="text-align:center;">  Personal Information </h1>
+<p style="text-align:center;" >
+   
 E-mail: alcored@outlook.com
 Mobile: +52 1 (3310533033)
+   
+   </p>
 
 <br/>
 <h1 style="text-align:center;"> Marcela Martinez Galván</h1>
 <br/>
 
-<p>Business Analyst in Technical Support and Development Processes.
+<p style="text-align:center;"> Business Analyst in Technical Support and Development Processes.
    Over 5 and half years of professional Experience on IT Service for optimization and continuos improvement processes,
    Focussed on customer service, strong analysis skills for decision making.
    Solved and proven analyticals skills to planning and coordinating activities between functional and development team.</p>
 <br/>
-<nav>
+<nav style="text-align:center;">
 <ul>
-<li>Functional and Technical Support</li>
-<li>Proven ability to identifym analyze and solve problems</li>
+<li> Functional and Technical Support</li>
+<li> Proven ability to identifym analyze and solve problems</li>
 <li>Multi task skills</li>
 <li>Commitment and Proactive Person</li>
 <li>Attitude and solid character to make decisions.</li>
@@ -32,30 +35,31 @@ Mobile: +52 1 (3310533033)
    <h3> RMS Monitor Process for preventive maintenance </h3> 
    <p> Carestream, Soluciones Médicas y Manufactura,Guadalajara Jalisco <p>
    
-   <h3>Responsabilities : </h3>
+   <h3 style="text-align:center;">Responsabilities : </h3>
    <br/>
    
-   <p>Vertical LAR  administrator from a company Portal web ( used to  provide a proactive and preventive monitor service ) </p>
-   <p>Creating Customer Documentation</p>
-   <p>Coordinating, improving and participating on  the Support Process </p>
-   <p>Focal Point on LAR Customer requeriments for new Monitor Portal Version</p>
-   <p>Coordinating LAR Tunnelling Network implementations</p>
-   <p>Coordinating LAR MonitorMigration Processes </p>
-   <p>Elaborating  LAR Monitor Training Documentation</p>
+   <p style="text-align:center;">Vertical LAR  administrator from a company Portal web ( used to  provide a proactive and preventive monitor service ) </p>
+   <p style="text-align:center;">Creating Customer Documentation</p>
+   <p style="text-align:center;">Coordinating, improving and participating on  the Support Process </p>
+   <p style="text-align:center;">Focal Point on LAR Customer requeriments for new Monitor Portal Version</p>
+   <p style="text-align:center;">Coordinating LAR Tunnelling Network implementations</p>
+   <p style="text-align:center;">Coordinating LAR MonitorMigration Processes </p>
+   <p style="text-align:center;">Elaborating  LAR Monitor Training Documentation</p>
    
-   <h3> Technologies used: </h3>   
+   <h3 style="text-align:center;"> Technologies used: </h3>   
    <br/>
    
-   <p>MySQL 5.5.2 </p>
-   <p>Scrum Methodology</p>
-   <p>SQL lite</p>   
-   <p>PACS 10.1 Server</p>
-   <p>RIS V11 Server </p>
-   <p>RMS Monitor Portal</p>
-   <p>Sametime</p>
-   <p>Sharepoint 2008</p>
-   <p>Acrobat PDF</p>
-   <p>Migration Platform</p>
+   <p style="text-align:center;">MySQL 5.5.2 </p>
+   <p style="text-align:center;">Scrum Methodology</p>
+   <p style="text-align:center;">SQL lite</p>   
+   <p style="text-align:center;">PACS 10.1 Server</p>
+   <p style="text-align:center;">RIS V11 Server </p>
+   <p style="text-align:center;">RMS Monitor Portal</p>
+   <p style="text-align:center;">Sametime</p>
+   <p style="text-align:center;">Sharepoint 2008</p>
+   <p style="text-align:center;">Acrobat PDF</p>
+   <p style="text-align:center;">Migration Platform</p>
+   
    
    
    
