--- a/index.html
+++ b/index.html
@@ -21,16 +21,15 @@ Mobile: +52 1 (3310533033)
    Solved and proven analyticals skills to planning and coordinating activities between functional and development team.</p>
 <br/>
 
-   <nav style="text-align:center;">
-      <ul>
-<li> Functional and Technical Support</li>
-<li> Proven ability to identifym analyze and solve problems</li>
-<li>Multi task skills</li>
-<li>Commitment and Proactive Person</li>
-<li>Attitude and solid character to make decisions.</li>
-<li>Reliable and professional person willing to learn.</li>
-</ul>
-</nav>
+   <p style="text-align:center;">
+      
+ Functional and Technical Support
+ Proven ability to identifym analyze and solve problems
+ Multi task skills
+ Commitment and Proactive Person
+ Attitude and solid character to make decisions.
+ Reliable and professional person willing to learn.
+   </p>
 
    <h2 style="text-align:center;"> Professional Experience </h2>
                                                     
