--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
    Solved and proven analyticals skills to planning and coordinating activities between functional and development team.</h5>
 <br/>
 
-  
+  <nav>
+   
+   <li>
  <h5 style="text-align:center;"> Functional and Technical Support </h5>
  <h5 style="text-align:center;"> Proven ability to identifym analyze and solve problems</h5>
   <h5 style="text-align:center;">Multi task skills</h5>
@@ -28,6 +30,8 @@
   <h5 style="text-align:center;">Attitude and solid character to make decisions.</h5>
   <h5 style="text-align:center;">Reliable and professional person willing to learn.</h5>
  
+    </li>
+ </nav>
    <br/>
    
    <h2 style="text-align:center; color:#c0c0c0"> Professional Experience </h2>
