--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                                  
    <h5 style="text-align:center;">Carestream, Soluciones Médicas y Manufactura,Guadalajara Jalisco </h5>
    
-   <h2 style="text-align:center;color:#c0c0c0"> Responsabilities : </h>
+   <h2 style="text-align:center;color:#c0c0c0"> Responsabilities : </h2>
       
    <h5 style="text-align:center;"> Vertical LAR  administrator from a company Portal web ( used to  provide a proactive and preventive monitor service ) </h5>
    <h5 style="text-align:center;"> Creating Customer Documentation</h5>
@@ -45,7 +45,7 @@
    <h5 style="text-align:center;">Coordinating LAR MonitorMigration Processes </h5>
    <h5 style="text-align:center;"> Elaborating  LAR Monitor Training Documentation</h5>
    
-   <h3 style="text-align:center;color:#c0c0c0">Technologies used:</h3>   
+   <h2 style="text-align:center;color:#c0c0c0">Technologies used:</h2>   
     <br/>
    <h5 style="text-align:center;"> MySQL 5.5.2 
    ,Scrum Methodology, SQL lite, PACS 10.1 Server, RIS V11 Server, RMS Monitor Portal, Sametime, Sharepoint 2008, Acrobat PDF,
