--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
    
    <h2 style="text-align:center; color:#c0c0c0"> Professional Experience </h2>
                                                     
-   <h3 style="text-align:center;"> RMS Monitor Process for preventive maintenance </h3> 
+   <h3 style="text-align:center;"> LAR Channel Manager on Preventive Process </h3> 
                                  
    <h5 style="text-align:center;">Carestream, Soluciones Médicas y Manufactura,Guadalajara Jalisco </h5>
    
