--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   
 
 <h5 style="text-align:center;"> Business Analyst in Technical Support and Development Processes.
-   Over 5 and half years of professional Experience on IT Service for optimization and continuos improvement processes,
+   Over 6 years of professional Experience on IT Service for optimization and continuos improvement processes,
    Focussed on customer service, strong analysis skills for decision making.
    Solved and proven analyticals skills to planning and coordinating activities between functional and development team.</h5>
 
