--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 
-  <body >
+  <body  background="/contact.jpg">
+    
 <h1 style="text-align:center;color:#c0c0c0;"> Marcela Martinez Galván</h1>
   
 
