--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 
-  <body  background="/contact.jpg">
+  <body  background="/contact1.jpg">
     
 <h1 style="text-align:center;color:#c0c0c0;"> Marcela Martinez Galván</h1>
   
