--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 
- <body background="https://www.imageupload.co.uk/images/2017/04/20/background.jpg">
+ <body background="contact1.jpg">
     
 <h1 style="text-align:center;color:#c0c0c0;"> Marcela Martinez Galván</h1>
   
