--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-
+<head>
+ <link rel="stylesheet" type="text/css" href="main.css"/>
+ </head>
  <body background="contact1.jpg" width="100%" height="100%">
     
 <h1 style="text-align:center;color:#c0c0c0;"> Marcela Martinez Galván</h1>
