--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 
- <body background="contact1.jpg" opacity:0.5;>
+ <body background="contact1.jpg" background-repeat:no-repeat;>
     
 <h1 style="text-align:center;color:#c0c0c0;"> Marcela Martinez Galván</h1>
   
