--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <html>
 
+ <head>
+ 
+  <link rel="stylesheet" type="text/css" href="main.css"/>
+ 
+ </head>
+ 
  <body background="contact1.jpg" background-repeat:no-repeat;background-size:cover; width="100%" height="100%" >
     
-<h1 style="text-align:center;color:#c0c0c0;"> Marcela Martinez Galván</h1>
+
+  <h1 style="text-align:center;color:#c0c0c0;"> Marcela Martinez Galván</h1>
   
 
 <h5 style="text-align:center;"> Business Analyst in Technical Support and Development Processes.
