--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  
  </head>
  
- <body background="contact1.jpg"  width="100%" height="100%" background-repeat:no-repeat; background-size:cover; margin:0; padding:0; border:0; >
+ <body background="contact1.jpg"  width="100%" height="100%" >
     
 
   <h1 style="text-align:center;color:#c0c0c0;"> Marcela Martinez Galván</h1>
