--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
  <head>
  
   <title> Resume </title>
+  
+  <link rel="stylesheet" type="text/css" href="main.css"/>
  
  </head>
  
- <body background="contact1.jpg"  width="600%" height="600%" >
+ <body background="contact1.jpg"  width="100%" height="100%" >
     
 
   <h1 style="text-align:center;color:#c0c0c0;"> Marcela Martinez Galván</h1>
