--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  
  </head>
  
- <body background="contact1.jpg"  width="100%" height="100%" >
+ <body background="contact1.jpg"  >
     
 
   <h1 style="text-align:center;color:#c0c0c0;"> Marcela Martinez Galván</h1>
