--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
  
   <title> Resume </title>
   
-  <link rel="stylesheet" type="text/css" href="main.css"/>
- 
+  <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
+
+  <link rel="stylesheet" type="text/css" href="index_style.css"/>
+  
  </head>
  
- <body background="contact1.jpg"  >
+ <body>
     
 
   <h1 style="text-align:center;color:#c0c0c0;"> Marcela Martinez Galván</h1>
