--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   
   <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
 
-  <link rel="stylesheet" type="text/css" href="index_style.css"/>
+  <link rel="stylesheet" type="text/css" href="/main.css"/>
   
  </head>
  
