--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
  </head>
  
- <body background="contact1.jpg">
+ <body>
     
 
   <h1 style="text-align:center;color:#c0c0c0;"> Marcela Martinez Galván</h1>
