--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  </head>
  
  <body>
-    
+    <img src="contact1.jpg" id="bg" alt="">
 
   <h1 style="text-align:center;color:#c0c0c0;"> Marcela Martinez Galván</h1>
   
