--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   
  </head>
  
- <body>
-    <img src="contact1.jpg" id="bg" alt="">
+ <body  background-image="contact1.jpg" >
 
   <h1 style="text-align:center;color:#c0c0c0;"> Marcela Martinez Galván</h1>
   
