--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+ 
+ background: url(contact1.jpg) no-repeat center center fixed; 
+	webkit-background-size: cover;
+	background-size: cover;
 
  <head>
  
