--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
   
   <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
 
-  <link rel="stylesheet" type="text/css" href="/main.css"/>
-  
+   
  </head>
  
- <body  background-image="contact1.jpg" >
+ <body >
 
   <h1 style="text-align:center;color:#c0c0c0;"> Marcela Martinez Galván</h1>
   
