--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <html>
  
- background: url(contact1.jpg) no-repeat center center fixed; 
-	webkit-background-size: cover;
-	background-size: cover;
+
 
  <head>
  
@@ -13,7 +11,9 @@
    
  </head>
  
- <body >
+ <body   background: url(contact1.jpg) no-repeat center center fixed; 
+	webkit-background-size: cover;
+	background-size: cover; >
 
   <h1 style="text-align:center;color:#c0c0c0;"> Marcela Martinez Galván</h1>
   
