--- a/index.html
+++ b/index.html
@@ -10,10 +10,27 @@
 
    
  </head>
+	
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="icon" type="image/png" href="favicon.png" />
+<title>nombre de la empresa</title>
+<style type="text/css">
+<!--
+body {
+ background-image: url(contact1.jpg);
+	  background-position: center center;	  
+	  background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
+}
+#mail {
+	width: 100%;
+	position: fixed;
+}
+-->
+</style>
  
- <body   background: url(contact1.jpg) no-repeat center center fixed; 
-	webkit-background-size: cover;
-	background-size: cover; >
+ <body>
 
   <h1 style="text-align:center;color:#c0c0c0;"> Marcela Martinez Galván</h1>
   
