--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  </head>
 	
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link rel="icon" type="image/png" href="favicon.png" />
+<link rel="icon" type="image/png" href="alcored.jpg" />
 <title>nombre de la empresa</title>
 <style type="text/css">
 <!--
