--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ body {
   <h1 style="text-align:center;color:#c0c0c0;"> Marcela Martinez Galván</h1>
   
 
-<h5 style="text-align:center;"> Business Analyst in Technical Support and Development Processes.
+<h5 style="text-align:center;"> Business Analyst on Technical Support and Development Processes.
    Over 6 years of professional Experience on IT Service for optimization and continuos improvement processes,
    Focussed on customer service, strong analysis skills for decision making.
    Solved and proven analyticals skills to planning and coordinating activities between functional and development team.</h5>
