--- a/index.html
+++ b/index.html
@@ -32,30 +32,29 @@ body {
  
  <body>
 
-  <h1 style="text-align:center;color:#c0c0c0;"> Marcela Martinez Galván</h1>
+  <h1 style="text-align:center;color:#c0c0c0;"> Business Analyst on Technical Support and Development Processes </h1>
   
 
-<h5 style="text-align:center;"> Business Analyst on Technical Support and Development Processes.
-   Over 6 years of professional Experience on IT Service for optimization and continuos improvement processes,
-   Focussed on customer service, strong analysis skills for decision making.
-   Solved and proven analyticals skills to planning and coordinating activities between functional and development team.</h5>
+  <h5 style="text-align:center;"> 
+   Over 6 years of professional Experience on IT Service for optimization and continuos improvement processes.<br/>
+   Focussed on customer services and strong analysis for decision making.
+   Solved and proven analyticals skills to planning and coordinating activities between functional and Technical teams.</h5>
 
 
- <h5 style="text-align:center;"> Functional and Technical Support </h5>
- <h5 style="text-align:center;"> Proven ability to identifym analyze and solve problems</h5>
+ 
+ <h5 style="text-align:center;">Proactive</h5>
  <h5 style="text-align:center;">Multi task skills</h5>
- <h5 style="text-align:center;">Commitment and Proactive Person</h5>
- <h5 style="text-align:center;">Attitude and solid character to make decisions.</h5>
- <h5 style="text-align:center;">Reliable and professional person willing to learn.</h5>
+ <h5 style="text-align:center;">Attitude and solid character to make decisions </h5>
+ <h5 style="text-align:center;">Reliable and professional clerk</h5>
  
   
    
  <h2 style="text-align:center; color:#c0c0c0"> Professional Experience </h2>
- <h5 style="text-align:center;"> LAR Channel Manager on Preventive Process </h5> 
+ <h5 style="text-align:center;"> Monitor Preventive Processes </h5> 
  <h5 style="text-align:center;">Carestream, Soluciones Médicas y Manufactura,Guadalajara Jalisco </h5>
  <h2 style="text-align:center;color:#c0c0c0"> Responsabilities : </h2>
- <h5 style="text-align:center;"> Vertical LAR  administrator from a company Portal web ( used to  provide a proactive and preventive monitor service ) </h5>
- <h5 style="text-align:center;"> Creating Customer Documentation</h5>
+ <h5 style="text-align:center;">Vertical Administrator on  LAR monitor portal web ( used to  provide a proactive and preventive monitor service ) </h5>
+ <h5 style="text-align:center;">Creating Customer Documentation</h5>
  <h5 style="text-align:center;">Coordinating, improving and participating on  the Support Process </h5>
  <h5 style="text-align:center;">Focal Point on LAR Customer requeriments for new Monitor Portal Version</h5>
  <h5 style="text-align:center;">Coordinating LAR Tunnelling Network implementations</h5>
