--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ body {
  
  <body>
 
-  <h1 style="text-align:center;color:#c0c0c0;"> Business Analyst on Technical Support and Development Processes </h1>
+  <h1 style="text-align:center;color:#ffffff;"> Business Analyst on Technical Support and Development Processes </h1>
   
 
   <h5 style="text-align:center;"> 
@@ -49,10 +49,10 @@ body {
  
   
    
- <h2 style="text-align:center; color:#c0c0c0"> Professional Experience </h2>
+ <h2 style="text-align:center; color:#ffffff"> Professional Experience </h2>
  <h5 style="text-align:center;"> Monitor Preventive Processes </h5> 
  <h5 style="text-align:center;">Carestream, Soluciones Médicas y Manufactura,Guadalajara Jalisco </h5>
- <h2 style="text-align:center;color:#c0c0c0"> Responsabilities : </h2>
+ <h2 style="text-align:center;color:#ffffff"> Responsabilities : </h2>
  <h5 style="text-align:center;">Vertical Administrator on  LAR monitor portal web ( used to  provide a proactive and preventive monitor service ) </h5>
  <h5 style="text-align:center;">Creating Customer Documentation</h5>
  <h5 style="text-align:center;">Coordinating, improving and participating on  the Support Process </h5>
@@ -61,74 +61,74 @@ body {
  <h5 style="text-align:center;">Coordinating LAR MonitorMigration Processes </h5>
  <h5 style="text-align:center;"> Elaborating  LAR Monitor Training Documentation</h5>
    
-<h2 style="text-align:center;color:#c0c0c0">Technologies used:</h2>   
+<h2 style="text-align:center;color:#ffffff">Technologies used:</h2>   
 <h5 style="text-align:center;"> MySQL 5.5.2,Scrum Methodology, SQL lite, PACS 10.1 Server, RIS V11 Server, RMS Monitor Portal, Sametime, Sharepoint 2008, Acrobat PDF,
  IDM Migration Platform</h5>
   
  
- <h2 style="text-align:center; color:#c0c0c0"> Professional Experience </h2>
+ <h2 style="text-align:center; color:#ffffff"> Professional Experience </h2>
  <h5 style="text-align:center;">Developer </h5> 
  <h5 style="text-align:center;">Dedamex Dedagroup,Guadalajara Jalisco </h5>
- <h2 style="text-align:center;color:#c0c0c0"> Responsabilities: </h2>
+ <h2 style="text-align:center;color:#ffffff"> Responsabilities: </h2>
  <h5 style="text-align:center;"> Elaborating Technical Dictionaries</h5>
  <h5 style="text-align:center;"> Creating Customer Documentation </h5>
- <h5 style="text-align:center;"> Comparing generated files for Data warehouse Use</h5>
+ <h5 style="text-align:center;"> Comparing and generated files to deliver information for ETL team </h5>
  <h5 style="text-align:center;"> Deploying Jeniux forms </h5>
  <h5 style="text-align:center;"> Despatching Support Tickets</h5>
 
    
-<h2 style="text-align:center;color:#c0c0c0">Technologies used:</h2>   
+<h2 style="text-align:center;color:#ffffff">Technologies used:</h2>   
 <h5 style="text-align:center;"> AS400 IBM, Eclipse,I system Navigator, Redmine,DB2. </h5>
-<h2 style="text-align:center; color:#c0c0c0"> Professional Experience </h2>                                            
+<h2 style="text-align:center; color:#ffffff"> Professional Experience </h2>                                            
 <h4 style="text-align:center;">Technical Support L2 Production </h4> 
 <h5 style="text-align:center;">IDS,IBM </h5>
    
- <h2 style="text-align:center;color:#c0c0c0"> Responsabilities: </h2>
+ <h2 style="text-align:center;color:#ffffff"> Responsabilities: </h2>
  <h5 style="text-align:center;"> Dispatching tickets </h5>
  <h5 style="text-align:center;"> Creating RFC</h5>
  <h5 style="text-align:center;"> Attending L2 tickets </h5>
    
- <h2 style="text-align:center;color:#c0c0c0">Technologies used:</h2>   
+ <h2 style="text-align:center;color:#ffffff">Technologies used:</h2>   
  <h5 style="text-align:center;"> AIX,Cisco Tidal Enterprise,Webex,Notepad++ 6.8.2, XML</h5>
   
  
- <h2 style="text-align:center; color:#c0c0c0"> Professional Experience </h2>
+ <h2 style="text-align:center; color:#ffffff"> Professional Experience </h2>
  <h5 style="text-align:center;"> Bussiness Analyst and Production Technical Support </h5> 
  <h5 style="text-align:center;">Morgan Stanley Account TATA Consultancy and services Company, Guadalajara,Jalisco</h5>
    
- <h2 style="text-align:center;color:#c0c0c0"> Responsabilities: </h2>
+ <h2 style="text-align:center;color:#ffffff"> Responsabilities: </h2>
    <h5 style="text-align:center;"> Supporting Customer applications for transactions and control processes</h5>
    <h5 style="text-align:center;"> Analysis on  XML transaction Code </h5>
    <h5 style="text-align:center;"> Dispatching Tickets </h5>
    <h5 style="text-align:center;"> Controlling Server status </h5>
    <h5 style="text-align:center;"> Creating Internal Documentation</h5>
    <h5 style="text-align:center;"> Manipulating Intelligent reports</h5>
-   <h2 style="text-align:center;color:#c0c0c0">Technologies used:</h2>   
+   <h2 style="text-align:center;color:#ffffff">Technologies used:</h2>   
    <h5 style="text-align:center;"> Infoview application, MQ Monitor, Putty Application,System I Navigator, Solaris OS,VBM, Unix, DB2 </h5>
                            
  
-  <h2 style="text-align:center;color:#c0c0c0;"> Academic References </h2>
+  <h2 style="text-align:center;color:#ffffff;"> Academic References </h2>
  
- <h3 style="text-align:center;color:#c0c0c0">University</h3> 
+ <h3 style="text-align:center;color:#ffffff">University</h3> 
  <h5 style="text-align:center;"> Institution: (ITD) Instituto Tecnologico de Durango,2010 </h5>
  <h5 style="text-align:center;"> Title: Intern in Electronic engineer.</h5>
  <h5 style="text-align:center;"> Speciality: Automatization processes and  Digital Systems</h5>
  
- <h3 style="text-align:center;color:#c0c0c0">Professional Practices</h3>
+ <h3 style="text-align:center;color:#ffffff">Professional Practices</h3>
  <h5 style="text-align:center;"> Institution: Grupo Garza Limon </h5>
  <h5 style="text-align:center;"> Area: Engineering Department</h5>
  <h5 style="text-align:center;"> Activities: Providing Digital Services through optical fiber 2009</h5>
  
- <h3 style="text-align:center;color:#c0c0c0"> Social Service</h3>
+ <h3 style="text-align:center;color:#ffffff"> Social Service</h3>
  <h5 style="text-align:center;">Institution: ITD</h5>
  <h5 style="text-align:center;"> Area: Postgrade Department</h5>
  <h5 style="text-align:center;"> Activities: Microncontrollers Research and Documention</h5>
  
- <h3 style="text-align:center;color:#c0c0c0">High-School</h3>
+ <h3 style="text-align:center;color:#ffffff">High-School</h3>
  <h5 style="text-align:center;"> Institution: (CBTIS No.89) Centro de Bachillerato Tecnológico Industrial y de Servicios No.89</h5>
  <h5 style="text-align:center;">Title:Electronic engineer specialist.</h5>
  
- <h2 style="text-align:center;color:#c0c0c0">Technical Managerial Skills</h2>
+ <h2 style="text-align:center;color:#ffffff">Technical Managerial Skills</h2>
  <h5 style="text-align:center;"> Gathering and analysis of requirements and delivery of solutions</h5>
  <h5 style="text-align:center;">OPerating systems, windows 8, windows7, Windows vista, Windowsxp, and olders versions
  Unix,Ubuntu. </h5>
@@ -139,12 +139,12 @@ body {
  <h5 style="text-align:center;">Webex meeting,communicator, Redmine,VBM,RIS 11,PACS10.0,IDM  Migration Platform,Ruby console,jekyll,Github Repository,Leela Application.Excell 2007 (Pivot Tables).</h5>
  
  <br/>
- <h2 style="text-align:center;color:#c0c0c0"> Courses </h2>
+ <h2 style="text-align:center;color:#ffffff"> Courses </h2>
  <h5 style="text-align:center;">Java SE7 Fundamentals and Programmers</h5>
  <h5 style="text-align:center;">Institution: Netect Center global knowledge </h5>
  <h5 style="text-align:center;">October 2013-June 2014 </h5>
  
- <h2 style="text-align:center;color:#c0c0c0">Languages </h2>
+ <h2 style="text-align:center;color:#ffffff">Languages </h2>
  <h5 style="text-align:center;">English: 90% </h5>
  
 </body>
